# streamlit-the-good-way

./: .gitignore  Makefile  TODO.md  main.py  mypy.ini  pyproject.toml
src/delivery/streamlit/: app.py  tabs.py
src/delivery/streamlit/components/: button.py  divider.py  header.py  image.py  play_again_button.py  solve_button.py  sub_header.py  title.py
src/delivery/streamlit/tabs/: capital.py  flag.py
src/domain/: component.py  countries_rest_client.py
src/infrastructure/: http_countries_rest_client.py
src/use_cases/: find_countries_by_capital_query.py  find_countries_by_capital_query_handler.py  find_countries_by_flag_query.py
tests/: test_dummy.py
tests/acceptance/: test_app.py
tests/integration/infrastructure/: test_http_countries_rest_client.py
tests/unit/delivery/streamlit/components/: test_divider.py  test_header.py  test_image.py  test_play_again_button.py  test_solve_button.py  test_sub_header.py  test_tabs.py  test_title.py
tests/unit/use_cases/: test_find_countries_by_capital_query.py  test_find_countries_by_flag_query.py
