[tool.poetry]
name = "streamlit-the-good-way"
version = "0.1.0"
description = "A practical guide to use Streamlit in a 'good' way"
authors = ["Pedro López Mareque <pedro.lopez.mareque@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
requests = "^2.32.3"
numpy = "^2.2.2"
pytest-xdist = "^3.6.1"
pytest-watch = "^4.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
expects = "^0.9.0"
doublex = "^1.9.6.1"
doublex-expects = "^0.7.1"
ruff = "^0.9.2"
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
